styles.css
body {
    display: grid;
    align-items: end;
    background: #b2f9ff; background: -moz-linear-gradient(315deg,  #b2f9ff 0%,#efebbe 100%); background: -webkit-linear-gradient(315deg,  #b2f9ff 0%,#efebbe 100%); background: linear-gradient(315deg,  #b2f9ff 0%,#efebbe 100%);
    font-family:perpetua;
    color:teal;
    margin:0;

  }

#header {
  display:grid;
  grid-row:1/2;
  grid-column:1/5;
  justify-items:center;
}

h1 {
    font-size: calc(.1em+4vw);
    text-shadow:2px 2px 5px rgba(0,0,0,.2);
    opacity:.3;

}

#main {
    display:grid;
    grid-template-columns: 15vw 1fr 1fr 15vw;
    grid-template-rows: 100px 1fr auto;
    border-radius:2em;
    align-content:center;
    justify-content:stretch;
    min-height:100vh;
}

#filter {
    display:none;
    grid-column:4/5;
    grid-row:1/2;
    justify-self: end;
    align-self:start;
    padding:10px;
    opacity:.3;
}

details {
  text-align:right;
 font-size: 20px;
}
  details > summary:first-of-type {
    list-style-type: none;
}

#quoteInfo {
    display: grid;
    grid-row:2/3;
    grid-column:2/4;
    justify-content:center;
    align-content:center;
    padding: 0 5vw;
}


.oneQ {
   text-align:center;
   align-self:center;
   border-top: double 4px rgba(0,146,146,.1);
   font-size: calc(5px + 3vh + 3vw);
   padding:  5px 10px;
   margin:0;
}

.oneQ:nth-child(1){
  border-top: none;
}



button {
    display:grid; 
    justify-self:center;
    align-self:center;
    align-content:center;
    font-weight: bolder;
    border: none;

    padding: 10px;
    font-size: 20px;
    color:teal;
    font-family:perpetua;
    justify-self:center;
    text-decoration-line:underline;
    background:none;
  }

 button:hover {
    transform: scale(1.1);
    opacity: .9;
    cursor:pointer;
  }

button:focus {
    outline:none;
  }

.grow { 
   transition: all .2s ease-in-out; 
   opacity:.3;
}

.grow:hover {
    transform: scale(1.1); 
    opacity:1;
}

#previous {
  grid-row: 2/4;
  grid-column: 1/2;
}

#next {
  grid-row: 2/4;
  grid-column: 4/5;
}

/* On screens that are 600px or less, set the background color to olive */
@media screen and (max-width: 600px) {

  #main {
    grid-template-rows: 30px 5fr 50px;
    font-size:calc(4px + 1vw + 1vh);
  }

  #filter {
    display:none;
  }

  #quoteInfo {
    grid-row:2/3;
    align-content:center;
    align-items:start;
    margin:0;
    padding:0;
  }

  .oneQ {
    font-size:calc(10px + 3vh + 3vw);
  }

  #previous{
    grid-row:3/4;
    grid-column:2/3;
}
    #next{
    grid-row:3/4;
    grid-column:3/4;
}
}

